--- a/home.html
+++ b/home.html
@@ -1,28 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>HOME</title>
-</head>
-<body>
+  </head>
+  <body>
     <main class="flex justify-center mt-5">
-        <div class="mockup-phone">
-            <div class="camera"></div>
-            <div class="display">
-              <div class="artboard artboard-demo phone-1">
-
-                <div class="stats shadow">
-                    <div class="stat">
-                      <div class="stat-value">89,400</div>
-                      <div class="stat-desc">Available Balance</div>
-                    </div>
-                  </div>
+      <div class="mockup-phone">
+        <div class="camera"></div>
+        <div class="display">
+          <div class="artboard artboard-demo phone-3">
+            <!-- bank balance section -->
+            <div>
+              <div class="stats shadow">
+                <div class="stat">
+                  <div class="stat-value">89,400</div>
+                  <div class="stat-desc">Available Balance</div>
+                </div>
               </div>
             </div>
+
+            <div class="divider"></div>
+            <!-- money management secton -->
+            <div>
+              <button class="btn btn-lg">Add Money</button>
+              <button class="btn btn-lg">Cash Out</button>
+            </div>
+            <div class="divider"></div>
+            <!-- money management input section -->
+            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+              <form class="card-body">
+                <div class="form-control">
+                  <label class="label">
+                    <span class="label-text">Ammount</span>
+                  </label>
+                  <input
+                    type="text"
+                    placeholder="Ammount"
+                    class="input input-bordered"
+                    required
+                  />
+                </div>
+                <div class="form-control">
+                  <label class="label">
+                    <span class="label-text">Pin</span>
+                  </label>
+                  <input
+                    type="password"
+                    autocomplete="off"
+                    placeholder="Your Pin"
+                    class="input input-bordered"
+                    required
+                  />
+                </div>
+                <div class="form-control mt-6">
+                  <button class="btn btn-primary">Add Money</button>
+                </div>
+              </form>
+            </div>
           </div>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
