working on add-money

--- a/home.html
+++ b/home.html
@@ -42,6 +42,7 @@
                     <span class="label-text">Ammount</span>
                   </label>
                   <input
+                    id="add-ammount"
                     type="text"
                     placeholder="Ammount"
                     class="input input-bordered"
@@ -53,6 +54,7 @@
                     <span class="label-text">Pin</span>
                   </label>
                   <input
+                    id="pin"
                     type="password"
                     autocomplete="off"
                     placeholder="Your Pin"
@@ -61,7 +63,7 @@
                   />
                 </div>
                 <div class="form-control mt-6">
-                  <button class="btn btn-primary">Add Money</button>
+                  <button id="add-money-btn" class="btn btn-primary">Add Money</button>
                 </div>
               </form>
             </div>
@@ -69,5 +71,6 @@
         </div>
       </div>
     </main>
+    <script src="./js/home.js"></script>
   </body>
 </html>
