--- a/payoo.html
+++ b/payoo.html
@@ -45,6 +45,6 @@
         </div>
       </div>
     </main>
-    <script src="./payoo.js"></script>
+    <script src="./js/payoo.js"></script>
 </body>
 </html>
